# ds-steve-cli

./: ARCHITECTURE.md  Makefile  Notes.md  README.md  jobs.yaml  pyproject.toml
docs/adr/: 001-sql-query-engine.md  002-spark-style-dataframes.md  003-iceberg-adoption.md
examples/: .encoded.env  apps.yaml  docker-compose.yml  validation_marquez_demo.py
steve_cli/: .gitignore  __init__.py  cli.py  storage.py
steve_cli/decorators/: __init__.py  lineage_job.py
steve_cli/lineage/: __init__.py  collector.py  port.py  registry.py  storage.py
steve_cli/lineage/adapters/: logging.py  null.py  openlineage.py
steve_cli/storage/: __init__.py  parquet.py  protocol.py  s3.py
steve_cli/storage/metadata/: __init__.py  port.py  registry.py
steve_cli/storage/metadata/extractors/: csv.py  excel.py  generic.py  json.py  parquet.py
steve_cli/v0/: lineage.py  lineage_storage.py  storage2.py
steve_cli/validation/: __init__.py  port.py  registry.py
steve_cli/validation/adapters/: great_expectations.py  null.py  validoopsie.py
test/: .gitignore  app.py  docker-compose.yml  jobs.yaml  lineage_demo.py  orders_demo2.py  orders_upload.py  validation_marquez_demo.py
tests/validation/: test_adapter_contract.py
