
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steve-cli"
version = "0.3.18"
description = "A simple CLI tool to run jobs from jobs.yaml with proper environment setup"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Frank"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.37.38",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "polars>=1.8.2",
    "pyarrow>=17.0.0",
    "validoopsie>=0.1.0",
    "openlineage-python>=1.0.0",
]
polars = [
    "polars>=1.8.2",
    "pyarrow>=17.0.0",
]
pandas = [
    "pandas>=2.0.3",
    "pyarrow>=17.0.0",
]
lineage = [
    "openlineage-python>=1.0.0",
]
validoopsie = [
    "validoopsie>=0.1.0",
    "polars>=1.8.2",
]
great-expectations = [
    "great-expectations>=0.18.0",
    "pandas>=2.0.3",
]
excel = [
    "openpyxl>=3.1.0",
]
visidata = [
    "visidata>=3.0",
]
all = [
    "openlineage-python>=1.0.0",
    "pyarrow>=17.0.0",
    "polars>=1.8.2",
    "validoopsie>=0.1.0",
    "great-expectations>=0.18.0",
    "pandas>=2.0.3",
    "openpyxl>=3.1.0",
    "visidata>=3.0",
]

[project.scripts]
steve = "steve_cli.cli:main"

[project.urls]
Homepage = "https://github.com/7frank/ds-steve-cli"
Repository = "https://github.com/7frank/ds-steve-cli"



[tool.setuptools.packages.find]
where = ["."]
include = ["steve_cli*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "great-expectations>=1.18.2",
]
